add toaster to create building && circuit

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/framework": "^11.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
-        "laravel/ui": "^4.5"
+        "laravel/ui": "^4.5",
+        "php-flasher/flasher-laravel": "^2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
