--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.2",
         "ctwillie/expo-server-sdk-php": "^2.1",
+        "intervention/image": "^3.11",
         "james-heinrich/getid3": "^1.9",
         "laravel/breeze": "^2.0",
         "laravel/framework": "^11.0",
